--- a/public/Components/ProfileMenuComponent/ProfileMenuComponent.css
+++ b/public/Components/ProfileMenuComponent/ProfileMenuComponent.css
@@ -1,4 +1,4 @@
-.profile-menu-wrapper {
+.profile-menu {
     top: 56px;
     right: 0;
     position: absolute;
@@ -26,48 +26,41 @@
     cursor: default;
 }
 
-.header__right:hover .profile-menu-wrapper {
+.header__right:hover .profile-menu {
     opacity: 1;
     transform: scale(1) translateY(0);
     z-index: 0;
     pointer-events: auto;
 }
 
-.profile-menu-top-wrapper {
+.profile-menu__info {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 8px;
 }
 
-.profile-menu-user-info {
+.profile-menu__profile-info {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.profile-menu-avatar {
-    width: 56px;
-    height: 56px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.profile-menu-name {
+.profile-menu__name {
     font-weight: var(--font-weight-bold);
     font-size: var(--font-size-l);
     line-height: var(--line-height-m);
     color: var(--text-primary);
 }
 
-.profile-menu-username {
+.profile-menu__username {
     font-weight: var(--font-weight-bold);
     font-size: var(--font-size-s);
     line-height: var(--line-height-m);
     color: var(--text-secondary);
 }
 
-.profile-menu-items {
+.profile-menu__items {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -75,7 +68,7 @@
     gap: 2px;
 }
 
-.profile-menu-item {
+.profile-menu__item {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -86,19 +79,17 @@
     border-radius: 8px;
     transition: var(--trans-menu);
     cursor: pointer;
-}
 
-.profile-menu-item-text {
     font-weight: var(--font-weight-regular);
     font-size: var(--font-size-l);
     line-height: 100%;
     color: var(--text-primary);
 }
 
-.profile-menu-item:hover {
+.profile-menu__item:hover {
     background: var(--button-secondary-hover);
 }
 
-.profile-menu-item:active {
+.profile-menu__item:active {
     background: var(--button-secondary-active);
 }
