--- a/public/Components/UI/ModalWindowComponent/ModalWindowComponent.css
+++ b/public/Components/UI/ModalWindowComponent/ModalWindowComponent.css
@@ -1,4 +1,4 @@
-.modal-window {
+.modal {
     max-width: 560px;
     width: 100%;
     padding: 16px 20px;
@@ -11,7 +11,7 @@
     align-items: flex-start;
 }
 
-.modal-window__bg {
+.modal__bg {
     background: var(--background-black-transparent);
     width: 100%;
     height: 100vh;
@@ -25,22 +25,22 @@
     justify-content: center;
 }
 
-.modal-window_post {
+.modal_post {
     gap: 8px;
 }
 
-.modal-window_profile {
+.modal_profile {
     gap: 12px;
 }
 
-.modal-window__top {
+.modal__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
 }
 
-.modal-window__close-btn {
+.modal__close {
     background: url('../../../static/img/close-icon.svg');
     width: 28px;
     height: 28px;
@@ -49,58 +49,58 @@
     border: none;
 }
 
-.modal-window__close-btn:hover {
+.modal__close:hover {
     background-color: var(--background-light-gray);
 }
 
-.modal-window__close-btn:active {
+.modal__close:active {
     background-color: var(--background-gray);
 }
 
-.modal-window__title {
+.modal__title {
     font-weight: var(--font-weight-bold);
     font-size: var(--font-size-l);
     line-height: var(--line-height-m);
     color: var(--text-primary);
 }
 
-.modal-window__items {
+.modal__items {
     display: flex;
     flex-direction: column;
     gap: 12px;
 }
 
-.modal-window__divider {
+.modal__divider {
     height: 1px;
     border-radius: 100px;
     background: var(--stroke-primary);
     width: 100%;
 }
 
-.modal-window__content {
+.modal__content {
     display: flex;
     flex-direction: column;
     gap: 16px;
     width: 100%;
 }
 
-.modal-window-count {
+.modal__count {
     font-size: var(--font-size-l);
 }
 
-.modal-window__items-counted {
+.modal__items-counted {
     display: flex;
     align-items: center;
     flex-direction: row;
     gap: 32px;
 }
 
-.modal-window__item-counted {
+.modal__item-counted {
     display: flex;
     flex-direction: column;
 }
 
-.modal-window__pics {
+.modal__pics {
     width: 100%;
     height: 128px;
     display: flex;
@@ -111,26 +111,7 @@
     overflow-y: hidden;
 }
 
-/* .modal-window-pics-wrapper.blank {
-    border: 1px dashed var(--stroke-primary-focus);
-    border-radius: 8px;
-    background: var(--background-white);
-    transition: var(--trans-menu);
-} */
-
-/* .modal-window-pics-wrapper.blank:hover {
-    background: var(--background-light-gray);
-}
-
-.modal-window-pics-wrapper.blank:active {
-    background: var(--background-gray);
-} */
-
-.modal-window__pics.blank .modal-window__add-pic-wrapper {
-    width: 100%;
-}
-
-.modal-window__add-pic-wrapper {
+.modal__add-pic {
     aspect-ratio: 1 / 1;
     height: 100%;
     display: flex;
@@ -138,7 +119,6 @@
     justify-content: center;
     flex-direction: column;
     gap: 4px;
-
     border: 1px dashed var(--stroke-primary-focus);
     border-radius: 8px;
     background: var(--background-white);
@@ -146,20 +126,24 @@
     cursor: pointer;
 }
 
-.modal-window__add-pic-wrapper:hover {
+.modal__add-pic:hover {
     background: var(--background-light-gray);
 }
 
-.modal-window__add-pic-wrapper:active {
+.modal__add-pic:active {
     background: var(--background-gray);
 }
 
-.modal-window__pic-wrapper {
+.modal__pics_blank .modal__add-pic {
+    width: 100%;
+}
+
+.modal__pic {
     height: 100%;
     aspect-ratio: 1 / 1;
 }
 
-.modal-window__pic {
+.modal__img {
     object-fit: cover;
     height: 100%;
     width: 100%;
@@ -167,12 +151,12 @@
     border: 1px solid var(--stroke-primary);
 }
 
-.modal-window__pics.blank .modal-window__add-pic {
-    width: 32px;
-    height: 32px;
-}
-
-.modal-window__add-pic {
+.modal__camera {
     width: 28px;
     height: 28px;
+}
+
+.modal__pics_blank .modal__camera {
+    width: 32px;
+    height: 32px;
 }
