--- a/public/Views/FeedView/FeedView.css
+++ b/public/Views/FeedView/FeedView.css
@@ -1,47 +1,9 @@
-.feed-filter {
-    border: 1px solid var(--stroke-primary);
-    border-radius: 12px;
-    padding: 8px;
-    width: 100%;
-    background: var(--text-white);
-    gap: 2px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.feed-filter-category {
-    border-radius: 8px;
-    padding: 0px 12px;
-    width: 100%;
-    height: 36px;
-    transition: var(--trans-menu);
-
-    font-weight: var(--font-weight-regular);
-    font-size: var(--font-size-s);
-    line-height: var(--line-height-m);
-    color: var(--text-primary);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    cursor: pointer;
-}
-
-.feed-filter-category:hover {
-    background: var(--background-light-gray);
-}
-
-.feed-filter-category:active {
-    background: var(--background-gray);
-}
-
-.post-create-btn {
+.button_feed {
     background: var(--background-white);
     border: 1px solid var(--stroke-primary);
     border-radius: 12px;
     width: 553px;
     height: 40px;
-
     font-weight: var(--font-weight-bold);
     font-size: var(--font-size-l);
     line-height: var(--line-height-m);
@@ -53,21 +15,21 @@
     justify-content: center;
 }
 
-.post-create-btn:hover {
+.button_feed:hover {
     background: var(--background-light-gray);
 }
 
-.post-create-btn:active {
+.button_feed:active {
     background: var(--background-gray);
 }
 
-.post-create-icon {
+.button_feed__icon {
     width: 20px;
     height: 20px;
     background: url('../../static/img/add-icon.svg');
 }
 
-.feed-posts-wrapper {
+.feed__posts {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
