--- a/public/Views/ProfileView/ProfileView.css
+++ b/public/Views/ProfileView/ProfileView.css
@@ -1,39 +1,35 @@
-.profile-header {
+.profile {
     width: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
 }
 
-.profile-header.edit {
+.profile_edit {
     margin-bottom: 44px;
 }
 
-.profile-cover-wrapper {
+.cover {
     width: 100%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 12px;
-}
-
-.profile-cover-wrapper {
     height: 256px;
-    border-radius: 12px;
 }
 
-.edit .profile-cover-wrapper {
+.cover_edit {
     height: 156px;
 }
 
-.profile-cover {
+.cover__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.profile-bottom {
+.profile__content {
     display: flex;
     flex-direction: row;
     height: 56px;
@@ -42,20 +38,20 @@
     justify-content: space-between;
 }
 
-.profile-info {
+.profile__info {
     display: flex;
     flex-direction: column;
     gap: 8px;
 }
 
-.profile-name {
+.profile__name {
     font-weight: var(--font-weight-bold);
     font-size: var(--font-size-xl);
     line-height: var(--line-height-m);
     color: var(--text-primary);
 }
 
-.profile-avatar {
+.profile__avatar {
     border-radius: 50%;
     position: absolute;
     bottom: 0;
@@ -63,32 +59,30 @@
     border: 4px solid var(--stroke-white);
 }
 
-.profile-info-full {
+.profile__details {
     display: flex;
     flex-direction: row;
     gap: 32px;
 }
 
-.profile-info-item {
+.profile__detail {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 8px;
-}
 
-.profile-info-icon {
-    width: 16px;
-    height: 16px;
-}
-
-.profile-info-text {
     font-weight: var(--font-weight-regular);
     font-size: var(--font-size-s);
     line-height: var(--line-height-m);
     color: var(--text-secondary);
 }
 
-.profile-friends-wrapper {
+.profile__icon {
+    width: 16px;
+    height: 16px;
+}
+
+.profile__friends {
     width: 100%;
     border: 1px solid var(--stroke-primary);
     border-radius: 12px;
@@ -97,24 +91,23 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-
     font-weight: var(--font-weight-bold);
     font-size: var(--font-size-l);
     line-height: var(--line-height-m);
     color: var(--text-primary);
 }
 
-.profile-friends-top {
+.profile__friends-header {
     display: flex;
     flex-direction: row;
     gap: 4px;
 }
 
-.profile-friends-count {
+.profile__friends-count {
     color: var(--text-secondary);
 }
 
-.profile-friends {
+.profile__friends-inner {
     display: flex;
     flex-wrap: wrap;
     gap: 12px;
@@ -122,7 +115,7 @@
     justify-content: space-evenly;
 }
 
-.profile-friend {
+.profile__friend {
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -135,19 +128,17 @@
     color: var(--text-primary);
 }
 
-.profile-more-info {
+.profile__detail_more {
     cursor: pointer;
-}
 
-.profile-more-info .profile-info-text {
     transition: var(--trans-btn);
 }
 
-.profile-more-info:hover .profile-info-text {
+.profile__detail_more:hover {
     text-decoration: underline;
 }
 
-.profile-more-info:active .profile-info-text {
+.profile__detail_more:active {
     text-decoration: underline;
     color: var(--text-secondary-hover);
 }
