--- a/public/Components/MessengerComponent/ChatsPanelComponent.scss
+++ b/public/Components/MessengerComponent/ChatsPanelComponent.scss
@@ -41,7 +41,7 @@
 }
 
 .chats-panel__filter {
-    background: url(../../static/img/filter-icon.svg) no-repeat;
+    background: url(./static/img/filter-icon.svg) no-repeat;
     width: 32px;
     height: 32px;
     background-position: center;
