--- a/public/Components/SignupFormComponent/SignupFormComponent.scss
+++ b/public/Components/SignupFormComponent/SignupFormComponent.scss
@@ -11,7 +11,7 @@
 }
 
 .auth-form__back-btn {
-    background: url(../../static/img/arrow-back-icon.svg) 0 0 no-repeat;
+    background: url(./static/img/arrow-back-icon.svg) 0 0 no-repeat;
     width: 32px;
     height: 32px;
     position: absolute;
