--- a/public/Components/UI/ModalWindowComponent/ModalWindowComponent.scss
+++ b/public/Components/UI/ModalWindowComponent/ModalWindowComponent.scss
@@ -41,7 +41,7 @@
 }
 
 .modal__close {
-    background: url('../../../static/img/close-icon.svg');
+    background: url('./../static/img/close-icon.svg');
     width: 28px;
     height: 28px;
     background-position: center;
