--- a/public/Views/FeedView/FeedView.scss
+++ b/public/Views/FeedView/FeedView.scss
@@ -26,7 +26,7 @@
 .button_feed__icon {
     width: 20px;
     height: 20px;
-    background: url('../../static/img/add-icon.svg');
+    background: url('./static/img/add-icon.svg');
 }
 
 .feed__posts {
