--- a/public/Components/MenuComponent/MenuComponent.scss
+++ b/public/Components/MenuComponent/MenuComponent.scss
@@ -57,12 +57,12 @@
     color: var(--text-accent);
 }
 
-.container_auth .header,
-.container_auth .menu {
-    display: none;
-}
+// .container_auth .header,
+// .container_auth .menu {
+//     display: none;
+// }
 
-.container_auth .main {
-    top: unset;
-    left: unset;
-}
+// .container_auth .main {
+//     top: unset;
+//     left: unset;
+// }
