--- a/public/imports.scss
+++ b/public/imports.scss
@@ -26,3 +26,4 @@
 @use './Views/ProfileView/ProfileView';
 @use './Views/EditProfileView/EditProfileView';
 @use './Views/MessengerView/MessengerView';
+@use './Views/NotFoundView/NotFoundView';
