--- a/public/Components/MainLayoutComponent/MainLayoutComponent.scss
+++ b/public/Components/MainLayoutComponent/MainLayoutComponent.scss
@@ -1,3 +1,16 @@
+.parent_hidden-ui .menu,
+.parent_hidden-ui .header {
+    display: none;
+}
+
+.main_wide {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
 .container {
     width: 100%;
     display: flex;
@@ -17,6 +30,15 @@
     justify-content: center;
     padding-bottom: 128px;
     background: radial-gradient(331.49% 141.42% at 0% 0%, #ced8ff 0%, #4369fc 100%);
+}
+
+.container_not-found {
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 80px;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .container_feed {
