--- a/public/Components/MessengerComponent/ChatsPanelComponent.scss
+++ b/public/Components/MessengerComponent/ChatsPanelComponent.scss
@@ -72,7 +72,7 @@
 }
 
 .chats-panel__chats {
-    padding: 0px 8px;
+    padding: 0px 8px 8px 8px;
     width: 100%;
     overflow: scroll;
     scrollbar-width: none;
