--- a/public/Components/PostComponent/PostComponent.scss
+++ b/public/Components/PostComponent/PostComponent.scss
@@ -33,6 +33,13 @@
         }
     }
 
+    &__name {
+        font-weight: var(--font-weight-bold);
+        font-size: var(--font-size-l);
+        line-height: var(--line-height-m);
+        color: var(--text-primary);
+    }
+
     &__more {
         cursor: pointer;
         color: var(--text-secondary);
@@ -122,6 +129,7 @@
     &__slide {
         width: 553px;
         aspect-ratio: 4 / 5;
+        display: flex;
     }
 
     &__pic {
@@ -196,21 +204,12 @@
         width: 28px;
         height: 28px;
         border-radius: 50%;
-        opacity: 0.5;
         cursor: pointer;
         display: flex;
         justify-content: center;
         align-items: center;
-
-        &:hover {
-            opacity: 0.65;
-            transition: var(--trans-menu);
-        }
-
-        &:active {
-            opacity: 0.8;
-            transition: var(--trans-menu);
-        }
+        opacity: 0;
+        transition: var(--trans-menu);
 
         &_prev {
             left: 12px;
@@ -218,6 +217,20 @@
 
         &_next {
             right: 12px;
+        }
+    }
+
+    &__pics:hover {
+        .post__nav {
+            opacity: 0.5;
+
+            &:hover {
+                opacity: 0.65;
+            }
+
+            &:active {
+                opacity: 0.8;
+            }
         }
     }
 
