--- a/public/Components/PostComponent/PostComponent.scss
+++ b/public/Components/PostComponent/PostComponent.scss
@@ -14,6 +14,7 @@
         font-weight: var(--font-weight-regular);
         font-size: var(--font-size-l);
         line-height: var(--line-height-m);
+        width: 100%;
     }
 
     &__text {
@@ -24,6 +25,8 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 2;
         line-clamp: 2;
+        width: 100%;
+        word-break: break-word;
 
         &_expanded {
             display: block;
