--- a/public/Components/PostComponent/PostComponent.scss
+++ b/public/Components/PostComponent/PostComponent.scss
@@ -59,7 +59,6 @@
         flex-direction: row;
         align-items: center;
         gap: 8px;
-        padding-bottom: 12px;
         justify-content: space-between;
         position: relative;
     }
@@ -127,6 +126,7 @@
         width: 553px;
         position: relative;
         border-radius: 8px;
+        margin-top: 12px;
     }
 
     &__slide {
