feed empty states

--- a/public/imports.scss
+++ b/public/imports.scss
@@ -21,6 +21,7 @@
 @use './Components/MessengerComponent/ChatsPanelComponent';
 @use './Components/MessengerComponent/ChatComponent';
 @use './Components/ResizerComponent/ResizerComponent';
+@use './Components/FeedComponent/FeedComponent';
 
 @use './Views/FeedView/FeedView';
 @use './Views/ProfileView/ProfileView';
