bug fixes + auth layout

--- a/public/imports.scss
+++ b/public/imports.scss
@@ -28,3 +28,4 @@
 @use './Views/EditProfileView/EditProfileView';
 @use './Views/MessengerView/MessengerView';
 @use './Views/NotFoundView/NotFoundView';
+@use './Views/LoginView/LoginView';
