--- a/public/Components/MainLayoutComponent/MainLayoutComponent.scss
+++ b/public/Components/MainLayoutComponent/MainLayoutComponent.scss
@@ -20,7 +20,6 @@
 .container_auth {
     max-width: 100%;
     padding: 24px 64px;
-    flex-direction: column;
     position: absolute;
     left: 0;
     top: 0;
@@ -30,6 +29,7 @@
     justify-content: center;
     padding-bottom: 128px;
     background: radial-gradient(331.49% 141.42% at 0% 0%, #ced8ff 0%, #4369fc 100%);
+    flex-direction: row;
 }
 
 .container_not-found {
