bug fixes + auth layout

--- a/public/Components/SignupFormComponent/SignupFormComponent.scss
+++ b/public/Components/SignupFormComponent/SignupFormComponent.scss
@@ -32,3 +32,7 @@
 .auth-form__back-btn:active {
     background-color: var(--button-secondary-active);
 }
+
+.auth-form__description {
+    white-space: pre-line;
+}
