--- a/public/Components/UI/ButtonComponent/ButtonComponent.scss
+++ b/public/Components/UI/ButtonComponent/ButtonComponent.scss
@@ -6,6 +6,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    white-space: nowrap;
 }
 
 .button_textless {
