--- a/public/imports.scss
+++ b/public/imports.scss
@@ -5,6 +5,7 @@
 @use './Components/UI/RadioComponent/RadioComponent';
 @use './Components/UI/ModalWindowComponent/ModalWindowComponent';
 @use './Components/UI/TextareaComponent/TextareaComponent';
+@use './Components/UI/PopUpComponent/PopUpComponent';
 
 @use './Components/PostComponent/PostComponent';
 @use './Components/MenuComponent/MenuComponent';
